<resources>
    <string name="app_name">FlightGearYoke</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="connect">Connect ...</string>
    <string name="yoke">Yoke</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="status">Status:</string>
    <string name="dots">...</string>
</resources>
