<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
                android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
                android:background="@android:color/background_dark">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/table1"
        android:stretchColumns="1"
        android:layout_above="@+id/l1">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="@string/connect"
                android:id="@+id/button"
                android:layout_weight="1"
                android:onClick="openConnectActivity"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="@string/yoke"
                android:id="@+id/button2"
                android:layout_weight="1"/>

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="@string/settings"
                android:id="@+id/button3"
                android:layout_weight="1"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="@string/exit"
                android:id="@+id/button4"
                android:layout_weight="1"/>

        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:id="@+id/l1"
        android:layout_alignParentEnd="false"
        android:layout_alignParentRight="false"
        android:divider="@drawable/mydivider"
        android:showDividers="middle"
        android:background="@android:color/darker_gray"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/status"
            android:id="@+id/textView1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/dots"
            android:id="@+id/textViewConnectionStatus"/>


    </LinearLayout>



</RelativeLayout>
